--- a/index.html
+++ b/index.html
@@ -7,190 +7,198 @@
   <meta name="description" content="Muhammad Ammar — Linux Administrator. Server setup, security, web servers (Apache/Nginx), Bash scripting." />
   <style>
     :root{
-      --bg-start:#e6f4ff;
-      --bg-end:#0078D7;
+      --bg-start:#6a11cb;
+      --bg-end:#2575fc;
       --card-bg: rgba(255,255,255,0.08);
-      --accent:#0078D7;
+      --accent:#ffdd00;
       --text:#0f1720;
-      --muted: rgba(15,23,32,0.75);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;
       font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      color:var(--text);
+      color:white;
       background: linear-gradient(135deg,var(--bg-start),var(--bg-end));
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
       display:flex;
       align-items:flex-start;
       justify-content:center;
       padding:36px 16px;
+      overflow-x:hidden;
     }
-
     .wrap{
       width:100%;
       max-width:980px;
       margin:12px auto;
-      animation:fadeIn .6s ease both;
+      animation:fadeIn 1s ease both;
     }
-
     header{
       display:flex;
       gap:18px;
       align-items:center;
-      background: transparent;
       padding:18px;
       border-radius:12px;
+      flex-wrap:wrap;
     }
-
     .logo{
       width:84px;
       height:84px;
-      border-radius:14px;
-      background:linear-gradient(180deg,rgba(255,255,255,0.18),rgba(255,255,255,0.06));
+      border-radius:50%;
       display:flex;
       align-items:center;
       justify-content:center;
       font-weight:700;
-      font-size:20px;
-      color:white;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.12);
+      font-size:24px;
+      box-shadow:0 6px 25px rgba(0,0,0,0.3);
+      transform-origin:center;
+      animation:logoPulse 2.5s ease-in-out infinite;
     }
-
-    .hero {
+    @keyframes logoPulse{
+      0%,100%{ transform: scale(1);}
+      50%{ transform: scale(1.05);}
+    }
+    .hero{
       flex:1;
       text-align:left;
     }
-
     .title{
       margin:0;
-      font-size:26px;
+      font-size:30px;
       color:white;
-      line-height:1.05;
+      line-height:1.1;
       font-weight:700;
-      text-shadow:0 2px 8px rgba(0,0,0,0.18);
+      text-shadow:0 2px 12px rgba(0,0,0,0.35);
+      animation:fadeInUp 1.2s ease forwards;
+      opacity:0;
     }
     .subtitle{
       margin:8px 0 0 0;
-      color:rgba(255,255,255,0.92);
+      color:white;
       opacity:0.95;
       font-size:15px;
+      animation:fadeInUp 1.4s ease forwards;
+      opacity:0;
     }
-
     .actions{
       margin-top:14px;
       display:flex;
       gap:10px;
       flex-wrap:wrap;
+      animation:fadeInUp 1.6s ease forwards;
+      opacity:0;
     }
-
     .btn{
       display:inline-block;
-      padding:10px 16px;
-      border-radius:10px;
+      padding:10px 18px;
+      border-radius:14px;
       text-decoration:none;
-      font-weight:600;
+      font-weight:700;
       cursor:pointer;
       border:0;
-      transition:transform .12s ease, box-shadow .12s ease;
-      box-shadow:0 6px 18px rgba(0,0,0,0.12);
+      transition: transform .2s ease, box-shadow .2s ease;
+      box-shadow:0 6px 20px rgba(0,0,0,0.25);
     }
     .btn-primary{
-      background: white;
-      color:var(--accent);
+      background: var(--accent);
+      color: #0f1720;
       border:1px solid rgba(255,255,255,0.2);
     }
-    .btn-secondary{
-      background: transparent;
-      color: white;
-      border:1px solid rgba(255,255,255,0.18);
+    .btn-primary:hover{
+      transform:translateY(-3px) scale(1.05);
+      box-shadow:0 8px 25px rgba(0,0,0,0.35);
     }
-    .btn:hover{ transform:translateY(-3px) }
-
+    .btn-secondary{
+      background: rgba(255,255,255,0.15);
+      color:white;
+      border:1px solid rgba(255,255,255,0.25);
+    }
+    .btn-secondary:hover{
+      transform:translateY(-3px) scale(1.03);
+      box-shadow:0 8px 22px rgba(0,0,0,0.25);
+    }
     main{
-      margin-top:18px;
+      margin-top:20px;
       display:flex;
       gap:20px;
       flex-direction:column;
     }
-
     .card {
       background: var(--card-bg);
       padding:18px;
-      border-radius:12px;
-      box-shadow: 0 10px 30px rgba(3,10,25,0.10);
+      border-radius:14px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.12);
       color:white;
+      animation:fadeInUp 1.8s ease forwards;
+      opacity:0;
     }
-
     .services-grid{
       display:grid;
       grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
-      gap:12px;
+      gap:14px;
       margin-top:12px;
     }
-
     .service{
-      background: rgba(255,255,255,0.04);
-      padding:14px;
-      border-radius:10px;
+      background: rgba(255,255,255,0.05);
+      padding:16px;
+      border-radius:12px;
       min-height:110px;
       display:flex;
       flex-direction:column;
       gap:8px;
-      transition: transform .16s ease, box-shadow .16s ease;
+      transition: transform .2s ease, box-shadow .2s ease;
       cursor:default;
     }
     .service:hover{
-      transform: translateY(-6px);
-      box-shadow: 0 12px 26px rgba(0,0,0,0.18);
+      transform: translateY(-8px);
+      box-shadow: 0 16px 30px rgba(0,0,0,0.28);
     }
-
     .service .icon{
-      width:40px;height:40px;border-radius:8px;display:inline-flex;align-items:center;justify-content:center;
-      background: linear-gradient(180deg, rgba(255,255,255,0.12), rgba(255,255,255,0.04));
-      color:white;font-weight:700;
+      width:44px;height:44px;border-radius:10px;display:inline-flex;align-items:center;justify-content:center;
+      background: linear-gradient(180deg, rgba(255,255,255,0.15), rgba(255,255,255,0.05));
+      color:white;font-weight:700;font-size:18px;
     }
     .service h4{ margin:0;font-size:16px;color:white}
-    .service p{ margin:0;color:rgba(255,255,255,0.85); font-size:13px; line-height:1.35 }
-
-    #about p{ color:var(--muted); font-size:15px; margin:6px 0 0 0; line-height:1.5; background:transparent; color: rgba(15,23,32,0.05); }
-    /* Use a subtle panel for the about so it contrasts with hero */
-    .about-wrap{ background:white;padding:18px;border-radius:12px;color:var(--text); box-shadow:0 10px 30px rgba(2,6,23,0.08) }
-
+    .service p{ margin:0;color:rgba(255,255,255,0.95); font-size:13px; line-height:1.35 }
+    #about p{ color:#0f1720; font-size:15px; margin:6px 0 0 0; line-height:1.5; }
+    .about-wrap{ background:white;padding:18px;border-radius:14px;color:var(--text); box-shadow:0 12px 30px rgba(2,6,23,0.12) }
     footer{
-      margin-top:18px;
+      margin-top:20px;
       text-align:center;
-      color:rgba(255,255,255,0.9);
+      color:white;
       font-size:13px;
       opacity:0.95;
+      animation:fadeInUp 2s ease forwards;
+      opacity:0;
     }
-
-    @keyframes fadeIn { from {opacity:0; transform:translateY(8px)} to{opacity:1; transform:none} }
-
-    /* responsive */
+    @keyframes fadeIn{ from {opacity:0} to{opacity:1} }
+    @keyframes fadeInUp{ from {opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
     @media (max-width:720px){
-      .logo{width:64px;height:64px;font-size:18px}
-      .title{font-size:20px}
+      .logo{width:64px;height:64px;font-size:20px}
+      .title{font-size:22px}
       .hero{text-align:center}
       .actions{justify-content:center}
-      header{flex-direction:column;align-items:center;gap:12px}
-      #about p{color:#444}
-      .about-wrap{background:#fff}
     }
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
-      <!-- If you later upload a logo image to the repo, replace this block with an <img> tag -->
-      <div class="logo" title="Ammar SysAdmin">AS</div>
+      <!-- Animated Logo SVG -->
+      <svg class="logo" viewBox="0 0 84 84" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" style="stop-color:#6a11cb;stop-opacity:1" />
+            <stop offset="100%" style="stop-color:#2575fc;stop-opacity:1" />
+          </linearGradient>
+        </defs>
+        <circle cx="42" cy="42" r="42" fill="url(#grad1)" />
+        <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"
+              font-family="Inter, sans-serif" font-size="28" font-weight="700" fill="white">AS</text>
+      </svg>
 
       <div class="hero">
-        <h1 class="title">Muhammad Ammar — Ammar SysAdmin</h1>
-        <div class="subtitle">Linux Administrator • Server Management • Web servers (Apache / Nginx) • Bash scripting</div>
-
+        <h1 class="title">Muhammad Ammar | AmmarSysAdmin</h1>
+        <div class="subtitle">Linux Administrator • Server Management • Web Servers (Apache / Nginx) • Bash Scripting</div>
         <div class="actions">
           <a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
           <a class="btn btn-secondary" href="#services">View My Services</a>
@@ -200,47 +208,42 @@
 
     <main>
       <section class="card about-wrap" id="about">
-        <h3 style="margin:0 0 8px 0">About Me</h3>
+        <h3>About Me</h3>
         <p>
-          I'm Muhammad Ammar, a focused Linux Administrator experienced with CentOS, Ubuntu, and Red Hat systems.
-          I build and maintain clean, secure, and efficient server environments so your sites and apps run reliably.
-          I provide clear reports and use secure access for all work.
+          I'm Muhammad Ammar, a professional Linux Administrator. I specialize in CentOS, Ubuntu, and Red Hat servers. 
+          I ensure your servers are secure, optimized, and maintained for reliable uptime. 
+          My work includes server setup, security hardening, web server configuration, and automation through Bash scripting.
         </p>
       </section>
 
       <section class="card" id="services">
-        <h3 style="margin:0 0 12px 0">My Services</h3>
+        <h3>My Services</h3>
         <div class="services-grid">
           <div class="service">
             <div class="icon">🖥️</div>
             <h4>Linux Server Setup</h4>
             <p>Install and configure CentOS, Ubuntu, or Red Hat with optimized settings for web hosting and apps.</p>
           </div>
-
           <div class="service">
             <div class="icon">🔒</div>
             <h4>Security Configuration</h4>
             <p>Firewall rules, SSH hardening, updates, and best practices to protect your server and data.</p>
           </div>
-
           <div class="service">
             <div class="icon">🌐</div>
             <h4>DNS & Networking</h4>
             <p>Configure DNS records, hostnames, and network settings to ensure reliable domain and connectivity.</p>
           </div>
-
           <div class="service">
             <div class="icon">🔑</div>
             <h4>SSH Access Setup</h4>
             <p>Secure SSH key setup, user management, and permission control for safe remote administration.</p>
           </div>
-
           <div class="service">
             <div class="icon">⚙️</div>
             <h4>Bash Scripting</h4>
             <p>Automate tasks with Bash scripts: backups, updates, monitoring tasks and routine maintenance.</p>
           </div>
-
           <div class="service">
             <div class="icon">🧩</div>
             <h4>Server Management</h4>
@@ -251,8 +254,8 @@
 
       <section class="card" style="display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap">
         <div style="flex:1;min-width:220px">
-          <h4 style="margin:0 0 8px 0">Ready to start?</h4>
-          <p style="margin:0;color:rgba(255,255,255,0.88)">Click the button to contact me on Fiverr. I'll review your requirements and respond with clear next steps.</p>
+          <h4>Ready to start?</h4>
+          <p style="margin:0;color:rgba(15,23,32,0.9)">Click the button to contact me on Fiverr. I'll review your requirements and respond with clear next steps.</p>
         </div>
         <div style="min-width:220px;text-align:right">
           <a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
@@ -266,10 +269,7 @@
   </div>
 
   <script>
-    // set year
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // smooth scroll for "View My Services"
     (function(){
       var btns = document.querySelectorAll('a[href^="#"]');
       for(var i=0;i<btns.length;i++){
