--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AmmarSysAdmin — Linux & Server Management</title>
-  <meta name="description" content="Muhammad Ammar — Linux Administrator. Server setup, security, web servers (Apache/Nginx), Bash scripting." />
+  <meta name="description" content="AmmarSysAdmin — Linux Administrator. Server setup, security, web servers (Apache/Nginx), Bash scripting." />
   <style>
     :root{
       --bg-start:#6a11cb;
@@ -14,10 +14,8 @@
       --text:#0f1720;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
+    html,body{height:100%; margin:0; font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
     body{
-      margin:0;
-      font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
       color:white;
       background: linear-gradient(135deg,var(--bg-start),var(--bg-end));
       display:flex;
@@ -26,7 +24,16 @@
       padding:36px 16px;
       overflow-x:hidden;
     }
+    canvas#particles{
+      position:absolute;
+      top:0; left:0;
+      width:100%; height:100%;
+      z-index:0;
+      pointer-events:none;
+    }
     .wrap{
+      position:relative;
+      z-index:1;
       width:100%;
       max-width:980px;
       margin:12px auto;
@@ -39,6 +46,7 @@
       padding:18px;
       border-radius:12px;
       flex-wrap:wrap;
+      position:relative;
     }
     .logo{
       width:84px;
@@ -181,6 +189,7 @@
   </style>
 </head>
 <body>
+  <canvas id="particles"></canvas>
   <div class="wrap">
     <header>
       <!-- Animated Logo SVG -->
@@ -193,96 +202,4 @@
         </defs>
         <circle cx="42" cy="42" r="42" fill="url(#grad1)" />
         <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle"
-              font-family="Inter, sans-serif" font-size="28" font-weight="700" fill="white">AS</text>
-      </svg>
-
-      <div class="hero">
-        <h1 class="title">Muhammad Ammar | AmmarSysAdmin</h1>
-        <div class="subtitle">Linux Administrator • Server Management • Web Servers (Apache / Nginx) • Bash Scripting</div>
-        <div class="actions">
-          <a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
-          <a class="btn btn-secondary" href="#services">View My Services</a>
-        </div>
-      </div>
-    </header>
-
-    <main>
-      <section class="card about-wrap" id="about">
-        <h3>About Me</h3>
-        <p>
-          I'm Muhammad Ammar, a professional Linux Administrator. I specialize in CentOS, Ubuntu, and Red Hat servers. 
-          I ensure your servers are secure, optimized, and maintained for reliable uptime. 
-          My work includes server setup, security hardening, web server configuration, and automation through Bash scripting.
-        </p>
-      </section>
-
-      <section class="card" id="services">
-        <h3>My Services</h3>
-        <div class="services-grid">
-          <div class="service">
-            <div class="icon">🖥️</div>
-            <h4>Linux Server Setup</h4>
-            <p>Install and configure CentOS, Ubuntu, or Red Hat with optimized settings for web hosting and apps.</p>
-          </div>
-          <div class="service">
-            <div class="icon">🔒</div>
-            <h4>Security Configuration</h4>
-            <p>Firewall rules, SSH hardening, updates, and best practices to protect your server and data.</p>
-          </div>
-          <div class="service">
-            <div class="icon">🌐</div>
-            <h4>DNS & Networking</h4>
-            <p>Configure DNS records, hostnames, and network settings to ensure reliable domain and connectivity.</p>
-          </div>
-          <div class="service">
-            <div class="icon">🔑</div>
-            <h4>SSH Access Setup</h4>
-            <p>Secure SSH key setup, user management, and permission control for safe remote administration.</p>
-          </div>
-          <div class="service">
-            <div class="icon">⚙️</div>
-            <h4>Bash Scripting</h4>
-            <p>Automate tasks with Bash scripts: backups, updates, monitoring tasks and routine maintenance.</p>
-          </div>
-          <div class="service">
-            <div class="icon">🧩</div>
-            <h4>Server Management</h4>
-            <p>Ongoing maintenance, log checks, troubleshooting, and performance tuning to keep your server stable.</p>
-          </div>
-        </div>
-      </section>
-
-      <section class="card" style="display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap">
-        <div style="flex:1;min-width:220px">
-          <h4>Ready to start?</h4>
-          <p style="margin:0;color:rgba(15,23,32,0.9)">Click the button to contact me on Fiverr. I'll review your requirements and respond with clear next steps.</p>
-        </div>
-        <div style="min-width:220px;text-align:right">
-          <a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
-        </div>
-      </section>
-
-      <footer>
-        © <span id="year"></span> Ammar SysAdmin — Linux & Server Management
-      </footer>
-    </main>
-  </div>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    (function(){
-      var btns = document.querySelectorAll('a[href^="#"]');
-      for(var i=0;i<btns.length;i++){
-        btns[i].addEventListener('click', function(e){
-          var href = this.getAttribute('href');
-          if(href && href.startsWith('#')){
-            e.preventDefault();
-            var el = document.querySelector(href);
-            if(el) el.scrollIntoView({behavior:'smooth', block:'start'});
-          }
-        });
-      }
-    })();
-  </script>
-</body>
-</html>
+              font-family="Inter, sans-serif" font-size="28" font
